upgraded to solr 4.10.4